@@ -26,32 +26,9 @@ Charlie
 
 NEW FEATURES (full details always in ChangeLog):
 
-A. ncclimo accepts mpassi in place of mpascice, mpasseaice, and
-   accepts new MPAS output filenames of form yyyy-mm-01-00000
-   ncclimo -s 2 -e 3 -m mpassi -i drc_in -o drc_out
-   http://nco.sf.net/nco.html#ncclimo
+A. 
 
-B. ncap2 allows optional scale_factor/add_offset arguments to its
-   pack() method for those who wish to specify their own packing
-   parameters. This override can ensure that multiple files use the
-   same packing parameters.  
-   ncap2 -s 'var_pck=pack(var,-0.001,40.0)' in.nc out.nc
-   http://nco.sf.net/nco.html#ncap2_mth
-
-C. NCO's security whitelist allows an extended character set when the 
-   input file explicitly invokes the DAP4 protocol (e.g.,
-   dap4://foo.com/in.nc). This allows DAP4 input to utilize the full
-   set of constraint expressions.
-   http://nco.sf.net/nco.html#wht_lst
-
-D. XML printing now includes the "ncml:" prefix on most tags.
-   This aligns NCO XML with XML produced by toolsUI version 4.6.11,
-   the latest (AFAICT) netCDF Java library. If this change bothers
-   you or breaks your XML workflow, let us know and we can make it
-   optional.
-   http://nco.sf.net/nco.html#xml
-
-E. Repeated notice: netCDF 4.6.1 fixes the CDF5 bug. Yay!
+A. Repeated notice: netCDF 4.6.1 fixes the CDF5 bug. Yay!
    We STRONGLY recommend that CDF5 users upgrade to netCDF 4.6.1.
    NCO error messages and HINTs have been updated to better describe
    the best practices to identify and avoid this nasty bug.
@@ -59,13 +36,9 @@ E. Repeated notice: netCDF 4.6.1 fixes the CDF5 bug. Yay!
 
 BUG FIXES:
 
-A. ncremap fixes the algorithm that identifies unstructured dimensions
-   to now check that size of candidates matches the size expected by
-   the mapping file. Failures then fall-back to PJCS mechanism of
-   searching for dimension with expected size. This fixes a bug
-   introduced in 4.7.4 where "hidden" (unused) dimensions can
-   supercede "visible" dimensions and crash the regridder.
-   Thanks to Sterling Baldwin for reporting this issue.
+A. NCO completes when chunking into non-netCDF4 files.
+   (of course it ignores the chunking request).
+   Previous NCO tried to complete but dumped-core.
 
 Full release statement at http://nco.sf.net/ANNOUNCE
 
